<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/padding_regular"
        android:text="@string/intro_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/choose_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_intro"
        android:padding="@dimen/padding_regular"
        android:text="@string/choose_a_dessert" />

    <ImageView
        android:id="@+id/donut"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_below="@id/choose_dessert"
        android:contentDescription="@string/donut_description"
        android:onClick="showDonutOrder"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/donut_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/choose_dessert"
        android:layout_toRightOf="@id/donut"
        android:padding="@dimen/padding_wide"
        android:text="@string/donut_description" />

    <ImageView
        android:id="@+id/icecream"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_below="@id/donut"
        android:contentDescription="@string/icecream_description"
        android:onClick="showIcecreamOrder"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/icecream_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/donut"
        android:layout_toRightOf="@id/icecream"
        android:padding="@dimen/padding_wide"
        android:text="@string/icecream_description" />

    <ImageView
        android:id="@+id/froyo"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_below="@id/icecream"
        android:contentDescription="@string/froyo_description"
        android:onClick="showFroyoOrder"
        android:padding="@dimen/padding_regular"
        android:src="@drawable/froyo_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icecream"
        android:layout_toRightOf="@id/froyo"
        android:padding="@dimen/padding_wide"
        android:text="@string/froyo_description" />

    <fragment
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />
</RelativeLayout>